Remove deprecated api. (#17)
