# api/api.go
@@ -65,140 +65,8 @@ func init() {
 	docs.SwaggerInfo.BasePath = BasePath
 }
 
-// dashboardHandler godoc
-//
-//	@Summary		Statistics dashboard
-//	@Description	Query statistics dashboard includes `storage fee` and `log sync height`
-//	@Tags			(deprecated)statistic
-//	@Produce		json
-//	@Success		200	{object}	api.BusinessError{Data=Dashboard}
-//	@Failure		600	{object}	api.BusinessError
-//	@Router			/statistic/dashboard [get]
-func dashboardHandler(c *gin.Context) {
-	api.Wrap(dashboard)(c)
-}
-
-// listTxStatHandler godoc
-//
-//	@Summary		Transaction statistics
-//	@Description	Query transaction statistics, including incremental and full data, and support querying at hourly or daily time intervals
-//	@Tags			(deprecated)statistic
-//	@Accept			json
-//	@Produce		json
-//	@Param			skip			query		int		false	"The number of skipped records, usually it's pageSize * (pageNumber - 1)"	minimum(0)	default(0)
-//	@Param			limit			query		int		false	"The number of records displayed on the page"								minimum(1)	maximum(2000)	default(10)
-//	@Param			minTimestamp	query		int		false	"Timestamp in seconds"
-//	@Param			maxTimestamp	query		int		false	"Timestamp in seconds"
-//	@Param			intervalType	query		string	false	"Statistics interval"	Enums(hour, day)	default(day)
-//	@Param			sort			query		string	false	"Sort by timestamp"		Enums(asc, desc)	default(desc)
-//	@Success		200				{object}	api.BusinessError{Data=TxStatList}
-//	@Failure		600				{object}	api.BusinessError
-//	@Router			/statistic/transaction/list [get]
-func listTxStatHandler(c *gin.Context) {
-	api.Wrap(listTxStat)(c)
-}
-
-// listDataStatHandler godoc
-//
-//	@Summary		Data storage statistics
-//	@Description	Query data storage statistics, including incremental and full data, and support querying at hourly or daily time intervals
-//	@Tags			(deprecated)statistic
-//	@Accept			json
-//	@Produce		json
-//	@Param			skip			query		int		false	"The number of skipped records, usually it's pageSize * (pageNumber - 1)"	minimum(0)	default(0)
-//	@Param			limit			query		int		false	"The number of records displayed on the page"								minimum(1)	maximum(2000)	default(10)
-//	@Param			minTimestamp	query		int		false	"Timestamp in seconds"
-//	@Param			maxTimestamp	query		int		false	"Timestamp in seconds"
-//	@Param			intervalType	query		string	false	"Statistics interval"	Enums(hour, day)	default(day)
-//	@Param			sort			query		string	false	"Sort by timestamp"		Enums(asc, desc)	default(desc)
-//	@Success		200				{object}	api.BusinessError{Data=DataStatList}
-//	@Failure		600				{object}	api.BusinessError
-//	@Router			/statistic/storage/list [get]
-func listDataStatHandler(c *gin.Context) {
-	api.Wrap(listDataStat)(c)
-}
-
-// listFeeStatHandler godoc
-//
-//	@Summary		fee statistics
-//	@Description	Query fee statistics, including incremental and full data, and support querying at hourly or daily time intervals
-//	@Tags			(deprecated)statistic
-//	@Accept			json
-//	@Produce		json
-//	@Param			skip			query		int		false	"The number of skipped records, usually it's pageSize * (pageNumber - 1)"	minimum(0)	default(0)
-//	@Param			limit			query		int		false	"The number of records displayed on the page"								minimum(1)	maximum(2000)	default(10)
-//	@Param			minTimestamp	query		int		false	"Timestamp in seconds"
-//	@Param			maxTimestamp	query		int		false	"Timestamp in seconds"
-//	@Param			intervalType	query		string	false	"Statistics interval"	Enums(hour, day)	default(day)
-//	@Param			sort			query		string	false	"Sort by timestamp"		Enums(asc, desc)	default(desc)
-//	@Success		200				{object}	api.BusinessError{Data=FeeStatList}
-//	@Failure		600				{object}	api.BusinessError
-//	@Router			/statistic/fee/list [get]
-func listFeeStatHandler(c *gin.Context) {
-	api.Wrap(listFeeStat)(c)
-}
-
-// listTxHandler godoc
-//
-//	@Summary		Layer2 transaction list
-//	@Description	Query layer2 transactions, support address and root hash filter
-//	@Tags			(deprecated)transaction
-//	@Accept			json
-//	@Produce		json
-//	@Param			skip		query		int		false	"The number of skipped records, usually it's pageSize * (pageNumber - 1)"	minimum(0)	default(0)
-//	@Param			limit		query		int		false	"The number of records displayed on the page"								minimum(1)	maximum(100)	default(10)
-//	@Param			address		query		string	false	"The submitter address of the uploaded file"
-//	@Param			rootHash	query		string	false	"The merkle root hash of the uploaded file"
-//	@Success		200			{object}	api.BusinessError{Data=TxList}
-//	@Failure		600			{object}	api.BusinessError
-//	@Router			/transaction/list [get]
-func listTxHandler(c *gin.Context) {
-	api.Wrap(listTx)(c)
-}
-
-// getTxBriefHandler godoc
-//
-//	@Summary		Layer2 transaction overview
-//	@Description	Query layer2 transaction overview by txSeq
-//	@Tags			(deprecated)transaction
-//	@Accept			json
-//	@Produce		json
-//	@Param			txSeq	query		string	true	"Lay2 transaction sequence number"
-//	@Success		200		{object}	api.BusinessError{Data=TxBrief}
-//	@Failure		600		{object}	api.BusinessError
-//	@Router			/transaction/brief [get]
-func getTxBriefHandler(c *gin.Context) {
-	api.Wrap(getTxBrief)(c)
-}
-
-// getTxDetailHandler godoc
-//
-//	@Summary		Layer2 transaction advanced info
-//	@Description	Query layer2 transaction advanced info by txSeq
-//	@Tags			(deprecated)transaction
-//	@Accept			json
-//	@Produce		json
-//	@Param			txSeq	query		string	true	"Lay2 transaction sequence number"
-//	@Success		200		{object}	api.BusinessError{Data=TxDetail}
-//	@Failure		600		{object}	api.BusinessError
-//	@Router			/transaction/detail [get]
-func getTxDetailHandler(c *gin.Context) {
-	api.Wrap(getTxDetail)(c)
-}
-
 func RegisterRouter(router *gin.Engine) {
 	apiRoute := router.Group(BasePath)
-
-	statRoute := apiRoute.Group("/statistic")
-	statRoute.GET("dashboard", dashboardHandler)
-	statRoute.GET("transaction/list", listTxStatHandler)
-	statRoute.GET("storage/list", listDataStatHandler)
-	statRoute.GET("fee/list", listFeeStatHandler)
-
-	txRoute := apiRoute.Group("/transaction")
-	txRoute.GET("list", listTxHandler)
-	txRoute.GET("brief", getTxBriefHandler)
-	txRoute.GET("detail", getTxDetailHandler)
 
 	statsRoute := apiRoute.Group("/stats")
 	statsRoute.GET("summary", summaryHandler)
