# docs/swagger.yaml
@@ -7,29 +7,6 @@ definitions:
       message:
         type: string
     type: object
-  api.CostInfo:
-    description: Charge fee information
-    properties:
-      basicCost:
-        description: Charge fee
-        type: number
-      tokenInfo:
-        allOf:
-        - $ref: '#/definitions/api.TokenInfo'
-        description: Charge token info
-    type: object
-  api.Dashboard:
-    description: Storage status information
-    properties:
-      logSyncInfo:
-        allOf:
-        - $ref: '#/definitions/stat.LogSyncInfo'
-        description: Synchronization information of submit event
-      storageBasicCost:
-        allOf:
-        - $ref: '#/definitions/api.StorageBasicCost'
-        description: Storage fee information
-    type: object
   api.DataStat:
     description: Storage data information
     properties:
@@ -86,28 +63,6 @@ definitions:
         description: The total number of stat returned
         type: integer
     type: object
-  api.StorageBasicCost:
-    description: Storage fee information
-    properties:
-      address:
-        description: The address of the token contract
-        type: string
-      basicCostTotal:
-        description: Total storage fee
-        type: number
-      decimals:
-        description: Token decimals
-        type: integer
-      name:
-        description: Token name
-        type: string
-      native:
-        description: True is native token, otherwise is not
-        type: boolean
-      symbol:
-        description: Token symbol
-        type: string
-    type: object
   api.StorageFeeStat:
     description: Stat storage fee information
     properties:
@@ -118,40 +73,6 @@ definitions:
       storageFeeTotal:
         description: Total storage fee
         type: number
-    type: object
-  api.StorageTx:
-    description: Submission information
-    properties:
-      address:
-        description: File uploader address
-        type: string
-      baseFee:
-        description: The storage fee required to upload the file
-        type: number
-      blockNum:
-        description: The block where the submit event is emitted
-        type: integer
-      dataSize:
-        description: File size in bytes
-        type: integer
-      method:
-        description: The name of the submit event is always `submit`
-        type: string
-      rootHash:
-        description: Merkle root of the file to upload
-        type: string
-      status:
-        description: File upload status, 0-not uploaded,1-uploading,2-uploaded
-        type: integer
-      timestamp:
-        description: The block time when submit event emits
-        type: integer
-      txHash:
-        description: The transaction where the submit event is emitted
-        type: string
-      txSeq:
-        description: Submission index in submit event
-        type: integer
     type: object
   api.StorageTxDetail:
     description: Submission transaction information
@@ -291,84 +212,6 @@ definitions:
         description: Token symbol
         type: string
     type: object
-  api.TxBrief:
-    description: Submission brief information
-    properties:
-      blockNumber:
-        description: The block where the submit event is emitted
-        type: integer
-      costInfo:
-        allOf:
-        - $ref: '#/definitions/api.CostInfo'
-        description: Charge fee information
-      dataSize:
-        description: File size in bytes
-        type: integer
-      expiration:
-        description: Expiration date of the uploaded file
-        type: integer
-      from:
-        description: File uploader address
-        type: string
-      gasFee:
-        description: The gas fee of the transaction on layer1
-        type: integer
-      gasLimit:
-        description: The gas limit of the transaction on layer1
-        type: integer
-      gasUsed:
-        description: The gas used of the transaction on layer1
-        type: integer
-      method:
-        description: The name of the submit event is always `submit`
-        type: string
-      rootHash:
-        description: Merkle root of the file to upload
-        type: string
-      status:
-        description: The status of the transaction on layer1
-        type: integer
-      timestamp:
-        description: The block time when submit event emits
-        type: integer
-      txHash:
-        description: The transaction where the submit event is emitted
-        type: string
-      txSeq:
-        description: Submission index in submit event
-        type: string
-    type: object
-  api.TxDetail:
-    description: Submission detail information
-    properties:
-      endPos:
-        description: The ending position of the file stored in the storage node
-        type: integer
-      pieceCounts:
-        description: The total number of segments the file is split into
-        type: integer
-      rootHash:
-        description: Merkle root of the file to upload
-        type: string
-      startPos:
-        description: The starting position of the file stored in the storage node
-        type: integer
-      txSeq:
-        description: Submission index in submit event
-        type: string
-    type: object
-  api.TxList:
-    description: Submission information list
-    properties:
-      list:
-        description: Submission list
-        items:
-          $ref: '#/definitions/api.StorageTx'
-        type: array
-      total:
-        description: The total number of submission returned
-        type: integer
-    type: object
   api.TxStat:
     description: Storage transaction information
     properties:
@@ -458,221 +301,6 @@ paths:
       summary: Account's storage transaction list
       tags:
       - account
-  /statistic/dashboard:
-    get:
-      description: Query statistics dashboard includes `storage fee` and `log sync
-        height`
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.Dashboard'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: Statistics dashboard
-      tags:
-      - (deprecated)statistic
-  /statistic/fee/list:
-    get:
-      consumes:
-      - application/json
-      description: Query fee statistics, including incremental and full data, and
-        support querying at hourly or daily time intervals
-      parameters:
-      - default: 0
-        description: The number of skipped records, usually it's pageSize * (pageNumber
-          - 1)
-        in: query
-        minimum: 0
-        name: skip
-        type: integer
-      - default: 10
-        description: The number of records displayed on the page
-        in: query
-        maximum: 2000
-        minimum: 1
-        name: limit
-        type: integer
-      - description: Timestamp in seconds
-        in: query
-        name: minTimestamp
-        type: integer
-      - description: Timestamp in seconds
-        in: query
-        name: maxTimestamp
-        type: integer
-      - default: day
-        description: Statistics interval
-        enum:
-        - hour
-        - day
-        in: query
-        name: intervalType
-        type: string
-      - default: desc
-        description: Sort by timestamp
-        enum:
-        - asc
-        - desc
-        in: query
-        name: sort
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.FeeStatList'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: fee statistics
-      tags:
-      - (deprecated)statistic
-  /statistic/storage/list:
-    get:
-      consumes:
-      - application/json
-      description: Query data storage statistics, including incremental and full data,
-        and support querying at hourly or daily time intervals
-      parameters:
-      - default: 0
-        description: The number of skipped records, usually it's pageSize * (pageNumber
-          - 1)
-        in: query
-        minimum: 0
-        name: skip
-        type: integer
-      - default: 10
-        description: The number of records displayed on the page
-        in: query
-        maximum: 2000
-        minimum: 1
-        name: limit
-        type: integer
-      - description: Timestamp in seconds
-        in: query
-        name: minTimestamp
-        type: integer
-      - description: Timestamp in seconds
-        in: query
-        name: maxTimestamp
-        type: integer
-      - default: day
-        description: Statistics interval
-        enum:
-        - hour
-        - day
-        in: query
-        name: intervalType
-        type: string
-      - default: desc
-        description: Sort by timestamp
-        enum:
-        - asc
-        - desc
-        in: query
-        name: sort
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.DataStatList'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: Data storage statistics
-      tags:
-      - (deprecated)statistic
-  /statistic/transaction/list:
-    get:
-      consumes:
-      - application/json
-      description: Query transaction statistics, including incremental and full data,
-        and support querying at hourly or daily time intervals
-      parameters:
-      - default: 0
-        description: The number of skipped records, usually it's pageSize * (pageNumber
-          - 1)
-        in: query
-        minimum: 0
-        name: skip
-        type: integer
-      - default: 10
-        description: The number of records displayed on the page
-        in: query
-        maximum: 2000
-        minimum: 1
-        name: limit
-        type: integer
-      - description: Timestamp in seconds
-        in: query
-        name: minTimestamp
-        type: integer
-      - description: Timestamp in seconds
-        in: query
-        name: maxTimestamp
-        type: integer
-      - default: day
-        description: Statistics interval
-        enum:
-        - hour
-        - day
-        in: query
-        name: intervalType
-        type: string
-      - default: desc
-        description: Sort by timestamp
-        enum:
-        - asc
-        - desc
-        in: query
-        name: sort
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.TxStatList'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: Transaction statistics
-      tags:
-      - (deprecated)statistic
   /stats/fee:
     get:
       consumes:
@@ -887,113 +515,6 @@ paths:
       summary: Statistics summary
       tags:
       - statistic
-  /transaction/brief:
-    get:
-      consumes:
-      - application/json
-      description: Query layer2 transaction overview by txSeq
-      parameters:
-      - description: Lay2 transaction sequence number
-        in: query
-        name: txSeq
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.TxBrief'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: Layer2 transaction overview
-      tags:
-      - (deprecated)transaction
-  /transaction/detail:
-    get:
-      consumes:
-      - application/json
-      description: Query layer2 transaction advanced info by txSeq
-      parameters:
-      - description: Lay2 transaction sequence number
-        in: query
-        name: txSeq
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.TxDetail'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: Layer2 transaction advanced info
-      tags:
-      - (deprecated)transaction
-  /transaction/list:
-    get:
-      consumes:
-      - application/json
-      description: Query layer2 transactions, support address and root hash filter
-      parameters:
-      - default: 0
-        description: The number of skipped records, usually it's pageSize * (pageNumber
-          - 1)
-        in: query
-        minimum: 0
-        name: skip
-        type: integer
-      - default: 10
-        description: The number of records displayed on the page
-        in: query
-        maximum: 100
-        minimum: 1
-        name: limit
-        type: integer
-      - description: The submitter address of the uploaded file
-        in: query
-        name: address
-        type: string
-      - description: The merkle root hash of the uploaded file
-        in: query
-        name: rootHash
-        type: string
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/api.BusinessError'
-            - properties:
-                Data:
-                  $ref: '#/definitions/api.TxList'
-              type: object
-        "600":
-          description: ""
-          schema:
-            $ref: '#/definitions/api.BusinessError'
-      summary: Layer2 transaction list
-      tags:
-      - (deprecated)transaction
   /txs:
     get:
       consumes:
